--- a/ModeloEntrevistasMovil/ModeloEntrevistasMovil.Android/ModeloEntrevistasMovil.Android.csproj
+++ b/ModeloEntrevistasMovil/ModeloEntrevistasMovil.Android/ModeloEntrevistasMovil.Android.csproj
@@ -99,5 +99,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\add.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\back.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
